--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,62 @@
-{{!-- Check 09-DayPlanner for details --}}
-
 {{!-- Initally just display the burgers from the database --}}
-<h1>All Burgers</h1>
+<img src="assets/img/burger.png" alt="burger" class="center" height="220" width="260">
+        
+<h1>Burger Bonanza!</h1>
 
-<div>
-{{#each burgers }}
-  <p>{{id}}  {{burger_name}}   {{devoured}}</p>
-{{/each}}
+<div class="row">
+    {{#each burgers}}
+        {{#unless devoured}}
+            <div class="col_left">
+                <div>
+                    {{id}}
+                    {{burger_name}}
+                    <button class="eat-burger" data-id="{{this.id}}">DEVOUR!</button>
+                </div>
+            </div>
+        {{/unless}}
+        {{#if devoured}}
+            <div class="col_right">
+                <div class="boxed">
+                    {{id}}
+                    {{burger_name}}
+                </div>
+            </div>
+        {{/if}}
+    {{/each}}
+    
 </div>
+
+
+{{!-- <h2>Add a Burger</h2>
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="bur">Burger Name:</label>
+    <input type="text" id="burger" name="name">
+  </div>
+
+  <button type="submit">Add Burger</button>
+</form> --}}
+
+<script type="text/javascript">
+  $(".eat-burger").on("click", function(event) {
+    const id = $(this).data("id");
+
+    var newState = {
+      devoured: true
+    };
+
+    // Send the PUT request.
+    $.ajax("/api/burgers/" + id, {
+      type: "PUT",
+      data: newState
+    }).then(
+      function() {
+        console.log("changed devoured to", newState);
+        // Reload the page to get the updated list
+        location.reload();
+      }
+    );
+  });
+
+</script>
