--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -9,8 +9,9 @@ h1 {
     margin-right: auto;
 }
 h2 {
-    padding: 5px;
-    margin-top: 20px;
+    /* padding: 5px; */
+    margin-top: 40px;
+    text-align: center;
 }
 
 .center {
@@ -22,16 +23,17 @@ h2 {
 .col_left {
     margin-left: 20%;
     /* text-align: center; */
-    width: 50%;
+    width: 40%;
     float: left;
 }
 .col_right {
-    margin-left: 20%;
-    width: 50%;
+    /* margin-left: 10%; */
+    width: 40%;
     float: right;
 }
 .boxed {
-    border: 1px solid white ;
+    padding: 5px;
+    border: 1px solid rgb(218, 108, 19) ;
     background-color: white;
     width: 300px
 }
@@ -45,4 +47,10 @@ form {
 }
 button {
     margin: 5px;
+    padding: 10px;
+    border-radius: 5px;
+}
+.submit_btn {
+    background: black;
+    color: white;
 }
