--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -27,7 +27,6 @@ h2 {
     float: left;
 }
 .col_right {
-    /* margin-left: 10%; */
     width: 40%;
     float: right;
 }
@@ -35,7 +34,7 @@ h2 {
     padding: 5px;
     border: 1px solid rgb(218, 108, 19) ;
     background-color: white;
-    width: 300px
+    width: 280px
 }
 .row::after {
     content: "";
@@ -53,4 +52,10 @@ button {
 .submit_btn {
     background: black;
     color: white;
+}
+
+@media only screen and (max-width: 768px) {
+    .col_left {
+        margin-left: 5%;
+    }
 }
